--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
     "typescript": "3.2.2"
@@ -27,10 +28,12 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@types/react-redux": "^7.0.0",
+    "@types/history": "^4.7.2",
     "@types/jest": "23.3.12",
     "@types/node": "10.12.18",
     "@types/react": "16.7.18",
-    "@types/react-dom": "16.0.11"
+    "@types/react-dom": "16.0.11",
+    "@types/react-redux": "^7.0.0",
+    "@types/react-router": "^4.4.3"
   }
 }
